--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Algazali M. Hamid
-  description: simple devops config
+  description: simple jenkins install for ubuntu 16.4 config
   company: Gazali (optional)
 
   # If the issue tracker for your role is not on github, uncomment the
@@ -16,7 +16,7 @@ galaxy_info:
   # - CC-BY
   license: MIT
 
-  min_ansible_version: 1.2
+  min_ansible_version: 2.0
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -35,13 +35,8 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - all
-    - name: Debian
-      versions:
         - 16.4
-    - name: EL
-      versions:
-        - all
+
 
   # Below are all categories currently available. Just as with
   # the platforms above, uncomment those that apply to your role.
